# chat_helper

./: README.md  main.py  pyproject.toml
src/: application.py  jsonManager.py  mouseMenu.py
